# fastapi-rag

./: .gitignore
backend/: README.md  pyproject.toml
backend/requirements/: base.txt  dev.txt
backend/src/: config.py  main.py  service.py  utils.py
backend/src/chat/: config.py  constants.py  dependencies.py  models.py  route.py  service.py  utils.py
