[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["FreelancecoderX <157281190+FreelancecoderX@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
