[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["FreelancecoderX <157281190+FreelancecoderX@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
llama-index = "^0.9.34"
pymongo = "^4.6.1"
fastapi = "^0.109.0"
pydantic-settings = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
